# voxen

./: .gitignore  Cargo.toml  README.md
base/: Cargo.toml
base/.cargo/: config.toml
base/daemon/: Cargo.toml
base/daemon/src/: main.rs
base/src/: main.rs
base/src/api/: mod.rs  shared.rs
base/src/daemon/: mod.rs
base/ui/: index.html  package-lock.json  package.json  vite.config.ts
base/ui/src/: App.svelte  app.css
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
firmware/beltpack/: Cargo.toml
firmware/beltpack/src/: device.rs  hw_interface.rs  hw_linux.rs  main.rs
