[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
opus = "0.3.1"
packed_struct = { version = "0.10.1", default-features = false, features = ["serde", "serde_derive", "use_serde"] }
postcard = "1.1.3"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde-big-array = "0.5.1"
